INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src
METASOURCES = AUTO

noinst_LIBRARIES = libEntityMapping.a
noinst_HEADERS = Actions/Action.h Actions/DummyAction.h Cases/AttributeCase.h \
	Cases/AttributeComparers/AttributeComparerWrapper.h Cases/AttributeComparers/HeightComparerWrapper.h \
	Cases/AttributeComparers/NumericComparer.h Cases/AttributeComparers/NumericComparerWrapper.h \
	Cases/AttributeComparers/NumericEqualsComparer.h Cases/AttributeComparers/NumericEqualsOrGreaterComparer.h \
	Cases/AttributeComparers/NumericEqualsOrLesserComparer.h Cases/AttributeComparers/NumericGreaterComparer.h \
	Cases/AttributeComparers/NumericLesserComparer.h Cases/AttributeComparers/NumericRangeComparer.h \
	Cases/AttributeComparers/NumericValueHolder.h Cases/AttributeComparers/StringComparer.h \
	Cases/AttributeComparers/StringComparerWrapper.h Cases/Case.h Cases/CaseBase.h Cases/EntityBaseCase.h \
	Cases/EntityTypeCase.h Cases/OutfitCase.h ChangeContext.h Definitions/ActionDefinition.h \
	Definitions/CaseDefinition.h Definitions/DefinitionBase.h Definitions/MatchDefinition.h \
	Definitions/EntityMappingDefinition.h IActionCreator.h Matches/AbstractMatch.h \
	Matches/AttributeDependentMatch.h Matches/AttributeMatch.h Matches/EntityTypeMatch.h Matches/MatchBase.h \
	Matches/Observers/AttributeObserver.h Matches/Observers/EntityCreationObserver.h Matches/OutfitMatch.h \
	EntityMapping.h EntityMappingCreator.h EntityMappingManager.h IVisitor.h
libEntityMapping_a_SOURCES = Actions/Action.cpp Actions/DummyAction.cpp \
	Cases/AttributeCase.cpp Cases/AttributeComparers/AttributeComparerWrapper.cpp \
	Cases/AttributeComparers/HeightComparerWrapper.cpp Cases/AttributeComparers/NumericComparer.cpp \
	Cases/AttributeComparers/NumericComparerWrapper.cpp Cases/AttributeComparers/NumericEqualsComparer.cpp \
	Cases/AttributeComparers/NumericEqualsOrGreaterComparer.cpp Cases/AttributeComparers/NumericEqualsOrLesserComparer.cpp \
	Cases/AttributeComparers/NumericGreaterComparer.cpp Cases/AttributeComparers/NumericLesserComparer.cpp \
	Cases/AttributeComparers/NumericRangeComparer.cpp Cases/AttributeComparers/NumericValueHolder.cpp \
	Cases/AttributeComparers/StringComparer.cpp Cases/AttributeComparers/StringComparerWrapper.cpp Cases/Case.cpp \
	Cases/CaseBase.cpp Cases/EntityBaseCase.cpp Cases/EntityTypeCase.cpp Cases/OutfitCase.cpp \
	ChangeContext.cpp Definitions/ActionDefinition.cpp Definitions/CaseDefinition.cpp \
	Definitions/DefinitionBase.cpp Definitions/MatchDefinition.cpp Definitions/EntityMappingDefinition.cpp \
	Matches/AbstractMatch.cpp Matches/AttributeDependentMatch.cpp \
	Matches/AttributeMatch.cpp Matches/EntityTypeMatch.cpp Matches/MatchBase.cpp \
	Matches/Observers/AttributeObserver.cpp Matches/Observers/EntityCreationObserver.cpp Matches/OutfitMatch.cpp \
	EntityMapping.cpp EntityMappingCreator.cpp EntityMappingManager.cpp 
