INCLUDES = -I$(top_srcdir)/src  -I$(top_builddir)/src -DPREFIX=\"@prefix@\"
noinst_LIBRARIES = libLua.a
libLua_a_SOURCES = LuaHelper.cpp LuaScriptingProvider.cpp luaobject.cpp LuaScriptingCallContext.cpp Connectors.cpp
noinst_HEADERS = LuaHelper.h LuaScriptingProvider.h luaobject.h LuaScriptingCallContext.h tolua++.h Connectors.h Connectors_impl.h

